Remove teaching/reading notes and fix sidebar wrap

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -234,7 +234,9 @@
   }
 
   li {
-    white-space: nowrap;
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
   }
 
   a {
